--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="gallery-grid">
                     <div class="gallery-item"><img src="assets/images/Tomas fotograficas de platillos y bebidas (9).jpg" alt="Plato gourmet en Pauli Kaffee"></div>
                     <div class="gallery-item"><img src="assets/images/Consumidores felices (1).jpg" alt="Clientes disfrutando en Pauli Kaffee"></div>
-                    <div class="gallery-item"><img src="assets/images/484089368...jpg" alt="Cappuccino con arte latte"></div>
+                    <div class="gallery-item"><img src="assets/images/Capuccino-con-arte.jpg" alt="Cappuccino con arte latte"></div>
                     <div class="gallery-item"><img src="assets/images/Exterior de Pauli (2).jpg" alt="Fachada de Pauli Kaffee"></div>
                     <div class="gallery-item"><img src="assets/images/Tomas fotograficas de platillos y bebidas (5).jpg" alt="Mesa servida con comida y café"></div>
                     <div class="gallery-item"><img src="assets/images/Fotos esteticas de personal y café (7).jpg" alt="Barista sonriente de Pauli Kaffee"></div>
