--- a/nosotros.html
+++ b/nosotros.html
@@ -48,7 +48,7 @@
                     <h3>Dos conceptos, una misma historia de sabor.</h3>
                 </div>
                 <div class="story-image">
-                    <img src="assets/images/482476537...jpg" alt="Decoración interior de Pauli Kaffee">
+                    <img src="assets/images/Floreros-interiores.jpg" alt="Decoración interior de Pauli Kaffee">
                 </div>
             </div>
         </section>
