--- a/nosotros.html
+++ b/nosotros.html
@@ -27,6 +27,9 @@
                 <li><a href="index.html#galeria">Galería</a></li>
                 <li><a href="index.html#contacto">Contacto</a></li>
             </ul>
+            <button class="nav-toggle" aria-label="Abrir menú">
+                <i class="fas fa-bars"></i>
+            </button>
         </nav>
     </header>
 
@@ -34,13 +37,13 @@
         <section class="page-header-section" style="background-image: url('assets/images/Más interiores de Pauli (7).jpg');">
             <div class="hero-overlay">
                 <div class="container">
-                    <h1 class="page-header-title">Nuestra Historia</h1>
+                    <h1 class="page-header-title reveal">Nuestra Historia</h1>
                 </div>
             </div>
         </section>
 
         <section class="content-section">
-            <div class="container story-container">
+            <div class="container story-container reveal">
                 <div class="story-text">
                     <h2 class="story-subtitle">De un rincón dulce a una experiencia completa.</h2>
                     <p>Todo comenzó con <strong>d’Pauli</strong>, un rincón dulce donde los postres eran los protagonistas. Con el tiempo, la pasión por crear experiencias memorables a través de la comida creció… y así nació <strong>Pauli Kaffee</strong>.</p>
@@ -54,7 +57,7 @@
         </section>
         
         <section class="content-section founder-section">
-            <div class="container founder-container">
+            <div class="container founder-container reveal">
                 <div class="founder-image">
                     <img src="assets/images/Paulina-fundadora.jpg" alt="Paulina Gulman, fundadora de Pauli Kaffee">
                 </div>
@@ -80,5 +83,6 @@
         </div>
     </footer>
 
-    </body>
+    <script src="script.js"></script>
+</body>
 </html>
