--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
                             <img src="assets/images/Consumidores felices (4).jpg" alt="Vitrina de postres de Pauli Kaffee" loading="lazy">
                         </a>
                     </div>
+                    <div class="gallery-item reveal">
+                        <a href="assets/images/Tomas fotograficas de platillos y bebidas (6).jpg" class="glightbox" data-gallery="pauli-gallery">
+                            <img src="assets/images/Tomas fotograficas de platillos y bebidas (6).jpg" alt="Plato gourmet en Pauli Kaffee" loading="lazy">
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
